# INVISABLE-Media-Team

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
core/: Dockerfile  README.md  alembic.ini  pyproject.toml
core/invisable_os/: __init__.py  cli.py  config.py  demo.py  main.py  smoke.py
core/invisable_os/agents/: __init__.py  registry.py
core/invisable_os/api/: __init__.py  audience_routes.py  auth.py  compliance_routes.py  desktop_routes.py  remix_routes.py  routes.py
core/invisable_os/brain/: __init__.py  memory.py
core/invisable_os/engines/: __init__.py  audience.py  connectors.py  cultural.py  daily.py  engagement.py  flywheel.py  founder.py  generator.py  harvester.py  hooks.py  insights.py  judge.py  mission.py  personality.py  quality.py  remix.py  scoring.py  studio.py  tagging.py  timing.py  tournament.py  watchdog.py  watchtower.py
core/invisable_os/guardrails/: __init__.py  crisis.py  engine.py  model_licensing.py  policy.py  rights.py
core/invisable_os/integrations/: __init__.py  metricool.py  resourcespace.py
core/invisable_os/llm/: __init__.py  client.py
core/invisable_os/media/: __init__.py  assembly.py  base.py  captions.py  comfyui.py  elevenlabs.py  export_gate.py  fsutil.py  probes.py  producer.py  region_probe.py  renderers.py  safe_area.py  video_qc.py
core/invisable_os/models/: __init__.py  content.py  departments.py  metrics.py  remix.py  scheduling.py  scoring.py  studio.py
core/invisable_os/operating/: __init__.py  interaction.py  modes.py  state.py
core/invisable_os/publish/: __init__.py  base.py  factory.py  postiz.py
core/invisable_os/scheduling/: __init__.py  defaults.py  engine.py
core/invisable_os/services/: __init__.py  attribution.py  backup.py  campaign.py  comment_war_room.py  consent.py  dam.py  decay.py  evaluation.py  fact_check.py  fallback.py  humanise.py  insights.py  media.py  metrics.py  newsroom.py  pipeline.py  scheduler.py  scheduling.py  selfcheck.py  source_scan.py  split_test.py  swarm.py  war_chest.py
core/invisable_os/store/: __init__.py  db.py  models.py  repository.py
core/invisable_os/studio/: __init__.py  store.py
core/invisable_os/web/: app.js  index.html  manifest.webmanifest  styles.css  sw.js
core/migrations/: env.py  script.py.mako
core/migrations/versions/: 0001_baseline.py
core/tests/: conftest.py  test_attribution.py  test_audience.py  test_auth.py  test_backup.py  test_campaign.py  test_comment_war_room.py  test_compliance_api.py  test_connectors.py  test_crisis.py  test_daily.py  test_decay.py  test_departments.py  test_desktop_api.py  test_desktop_e2e.py  test_end_to_end.py  test_engines.py  test_evaluation.py  test_export_gate.py  test_fallback.py  test_finish.py  test_founder_recognition.py  test_generation.py  test_guardrails.py  test_humanise.py  test_humour_safety.py  test_insights.py  test_integrations.py  test_media.py  test_media_assemble.py  test_media_render.py  test_migrations.py  test_model_licensing.py  test_n8n_workflows.py  test_newsroom.py  test_operating.py  test_operations.py  test_people_consent.py  test_pipeline_e2e.py  test_postgres_store.py  (+22 more)
db/: schema.sql
desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: api.rs  lib.rs  main.rs  settings.rs  token.rs  worker.rs
docs/: AGENT_LIBRARY.md  AGENT_SWARM.md  ARCHITECTURE.md  AUDIENCE.md  AUDIT_AND_NEXT_PLAN.md  BIG_CAMPAIGN.md  COMMENT_WAR_ROOM.md  CONTENT_DECAY.md  CREATIVE_TOOLBELT.md  CRISIS_MODE.md  DAILY_PIPELINE.md  DEPARTMENTS.md  DEPLOYMENT.md  ENGINES.md  EVALUATION.md  FAILSAFE_BACKUP.md  FALLBACK_CHAINS.md  FORMAT_SPLIT_TESTING.md  GENERATION.md  GODTIER_ARCHITECTURE.md  HUMANISATION.md  INSTALL_ORDER.md  (+18 more)
(+30 files in other folders)
