[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invisable-os"
version = "0.1.0"
description = "INVISABLE® AI Media Agency OS — the central operating system of the INVISABLE® movement."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "INVISABLE®", email = "hello@invisable.example" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    # SQLAlchemy + SQLite (stdlib driver) make the platform operational out of the
    # box with zero external services; swap DATABASE_URL for Postgres in production.
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
# Heavier integrations are optional so the core stays testable offline.
llm = ["anthropic>=0.40"]
memory = ["chromadb>=0.5"]
postgres = ["psycopg[binary]>=3.1"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
]

[project.scripts]
invisable = "invisable_os.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["invisable_os*"]

[tool.setuptools.package-data]
invisable_os = ["web/*", "web/**/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
