[package]
name = "invisable-media-desktop"
version = "0.1.0"
description = "INVISABLE® Media Team desktop app — Command Centre & Studio Worker"
authors = ["INVISABLE®"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "invisable_media_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
keyring = { version = "3", features = ["windows-native", "apple-native", "linux-native"] }
thiserror = "2"
anyhow = "1"

[features]
# This feature is used for production builds or when a dev server is not specified,
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
